--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       </div>
     </div>
 
-    <h5 class="top-title">The following experiments use three LibriSpeech and three GTZAN samples each. These samples were selected based on their ground truth diversity, not on their reconstruction quality.</h5>
+    <h5 class="top-title">The following experiments use three random LibriSpeech and three random GTZAN samples each.</h5>
     
     <h2>Quantized SIREN comparison</h2>
     <!-- <h5>[Shared, Siamese, #PE, Omega0, Omega, #Params]</h5> -->
