--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h1 class="text-center main-title">Siamese SIREN: Audio Compression with<br>Implicit Neural Representations</h1>
     <p class="text-center sub-title">Anonymous Authors</p>
     <h4 class="text">Use headphones for best experience.</h4>
-    <h5 class="text">Please ensure the page is completely loaded. In the event that audio or spectrograms are not available, reload the page.</h5>
+    <h5 class="text">Ensure the page is fully loaded. In the event that audio or spectrograms are not available, please reload the page.</h5>
 
     <h2 class="top-title">Siamese SIREN</h2>
     <p class="text">Comparison of noisy and denoised <i>libri3</i> and <i>choice</i> samples<sup>1</sup>. Notice the stereo effect from different noise but with the same underlying signal in the noisy reconstruction.</p>
