--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     
     <h2>Quantized SIREN comparison</h2>
     <!-- <h5>[Shared, Siamese, #PE, Omega0, Omega, #Params]</h5> -->
-    <p class="text">Comparison of different SIREN architectures. All reconstructions are computed after network quantization. We observe that the original SIREN, without positional encoding, is unable to reconstruct the signal.<br>PE refers to positional encoding, optimized SIREN refers to &omega;=100, NR refers to the Noise Reduce algorithm.</p>
+    <p class="text">Comparison of different SIREN architectures. All reconstructions are computed after network quantization. We observe that the original SIREN, without positional encoding, is unable to reconstruct the signal.<br>PE refers to positional encoding, optimized SIREN refers to frequency scaling &omega;=100, NR refers to the Noise Reduce algorithm.</p>
     <div class="row">
       <div class="col">
         <p>Ground Truth</p>
