--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 <body>
   <div class="container sub-title">
     <h1 class="text-center main-title">Siamese SIREN: Audio Compression with<br>Implicit Neural Representations</h1>
-    <p class="text-center sub-title">ICML 2023 Neural Compression Workshop</p>
-    <p class="text-center sub-title">
+    <p class="text-center">ICML 2023 Neural Compression Workshop</p>
+    <p class="text-center">
       <a href="https://disco.ethz.ch/members/lucala">Luca A. Lanzendörfer</a>
       and 
       <a href="https://disco.ethz.ch/members/wroger">Roger Wattenhofer</a>
