--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </p>
     <div class="container centered-buttons">
       <div class="btn-group">
-        <a href="https://arxiv.org/pdf/2306.12957.pdf" class="btn btn-primary">Paper</a>
+        <a href="https://arxiv.org/abs/2306.12957" class="btn btn-primary">Paper</a>
         <a href="https://github.com/lucala/siamese-siren" class="btn btn-primary">Code</a>
       </div>
     </div>
